<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="org.amd.aqua.SupportItemEditAcitivity"
    tools:showIn="@layout/activity_support_item_edit">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/contentsLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">


            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/title_content"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:id="@+id/taskGroupButtons"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/laundryButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_round_selector"
                        android:gravity="top|center_horizontal"
                        android:paddingBottom="15dp"
                        app:srcCompat="@drawable/flat_washing_machine"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|bottom"
                        android:paddingBottom="3dip"
                        android:text="@string/task_group_washing"/>
                </FrameLayout>

                <FrameLayout
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_gravity="center"
                    android:paddingLeft="5dip">

                    <android.support.v7.widget.AppCompatImageButton
                        android:id="@+id/cleanButton"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/button_round_selector"
                        android:gravity="top|center_horizontal"
                        android:paddingBottom="15dp"
                        app:srcCompat="@drawable/flat_clean"/>

                    <android.support.v7.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_horizontal|bottom"
                        android:paddingBottom="3dip"
                        android:text="@string/task_group_clean"/>
                </FrameLayout>

            </LinearLayout>

            <ListView
                android:id="@+id/taskList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"/>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/title_request_to"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/manButton"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"
                    android:text="@string/text_man"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/womanButton"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"
                    android:text="@string/text_woman"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/youngButton"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"
                    android:text="@string/text_young"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/middleButton"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"
                    android:text="@string/text_middle"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/seniorButton"
                    android:layout_width="90dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"
                    android:text="@string/text_senior"/>
            </LinearLayout>

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/text_limit"
                android:textColor="@color/colorPrimary"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/dateButton"
                    android:layout_width="120dp"
                    android:layout_height="55dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/hourButton"
                    android:layout_width="60dp"
                    android:layout_height="55dp"
                    android:layout_marginLeft="5dp"
                    android:background="@drawable/button_round_selector"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/saveButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/primary_button_round_selector"
                android:text="@string/text_request"
                android:textColor="@color/colorTitleText"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/closeButton"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/button_circle_selector"
                android:text="@string/close"/>
        </LinearLayout>


    </LinearLayout>
</LinearLayout>
