<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context="org.amd.aqua.fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorLightGlay"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="5dp">

        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/taskText"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="left|center_vertical"
            android:paddingLeft="5dp"
            android:textColor="@color/colorBlack"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:shrinkColumns="1"
            android:stretchColumns="1">

            <TableRow
                android:id="@+id/messageRow"
                android:paddingTop="5dip">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_message"
                    android:textColor="@color/colorBlack"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/messageText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow
                android:id="@+id/requestantRow"
                android:paddingTop="5dip">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_requestant"
                    android:textColor="@color/colorBlack"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/requestantText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow
                android:id="@+id/periodRow"
                android:paddingTop="5dip">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_period"
                    android:textColor="@color/colorBlack"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/periodText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"/>
            </TableRow>

            <TableRow
                android:id="@+id/statusRow"
                android:paddingTop="5dip">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/title_status"
                    android:textColor="@color/colorBlack"/>

                <android.support.v7.widget.AppCompatTextView
                    android:id="@+id/statusText"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="left"
                    android:paddingLeft="10dp"
                    android:textColor="@color/colorBlack"/>
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/actionButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/primary_button_round_selector"
                    android:text="@string/do_support_short"
                    android:textColor="@color/colorTitleText"/>
            </LinearLayout>


            <LinearLayout
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center">

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/closeButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:background="@drawable/button_circle_selector"
                    android:text="@string/close"/>
            </LinearLayout>


        </LinearLayout>
    </LinearLayout>
</LinearLayout>